Details
-
Bug
-
Resolution: Fixed
-
Critical
Description
https://reactos.org/testman/compare.php?ids=52341,52344,52346,52361
Since r74360:
- user32:monitor has 56 tests executed less and 8 additional failures
- user32:sysparams has 2 more tests executed and 1 more failure (this may be a good thing)
- Both tests occasionally crash with heap corruption ((LastEntry + LastEntry->Size) == FirstEntry asserts)
Attachments
Issue Links
- relates to
-
CORE-15325 [WIN32SS] Regression Pocket Tanks 1.6 does not properly switch the desktop resolution before entering fullscreen
-
- Resolved
-
-
CORE-6742 Can't dynamically change the resolution by resizing in VirtualBox
-
- Resolved
-